2004-05-09 Mikhail Khodjaiants
	Added the rendering method for debugger processes.
	* src/org/eclise/cdt/launch/AbstractCLaunchDelegate.java
	* src/org/eclise/cdt/launch/internal/CoreFileLaunchDelegate.java
	* src/org/eclise/cdt/launch/internal/LocalCLaunchConfigurationDelegate.java
	* src/org/eclipse/cdt/launch/internal/ui/LaunchUIPluginResources.properties

2004-05-09 Mikhail Khodjaiants
	Fix for bug 66015: I18N: English "Debug Console" in Debug and Console views.
	Warning cleanup.
	* src/org/eclise/cdt/launch/internal/CoreFileLaunchDelegate.java
	* src/org/eclise/cdt/launch/internal/LocalCLaunchConfigurationDelegate.java
	* src/org/eclipse/cdt/launch/internal/ui/LaunchUIPluginResources.properties
	* src/org/eclise/cdt/launch/internal/CApplicationLaunchShortcut.java

2004-06-08 Alain Magloire
	Make sure when something goes wrong before
	getting out the launch sequence to terminate the session.

	* src/org/eclise/cdt/launch/internal/CoreFileLaunchDelegate.java
	* src/org/eclise/cdt/launch/internal/LocalCLaunchConfigurationDelegate.java

2004-04-23 David Inglis

	fix for https://bugs.eclipse.org/bugs/show_bug.cgi?id=59680
	
	* src/org/eclipse/cdt/launch/internal/CApplicationLaunchShortcut.java
	* src/org/eclipse/cdt/launch/internal/CPropertyTester.java
	* plugin.xml
	
2004-04-19 Alain Magloire
	Core Model interface throws Exception

	* src/org/eclipse/cdt/launch/internal/CApplicationLaunchShortcut.java
	* src/org/eclipse/cdt/launch/ui/CMaintab.java

2004-04-06 Mikhail Khodjaiants

	Do not remove debugger process from launch.
	* src/org/eclipse/cdt/launch/internal/CoreFileLaunchDelegate.java
	* src/org/eclipse/cdt/launch/internal/LocalCLaunchConfigurationDelegate.java

2004-03-25 David Inglis

	getProcessList can throw a CoreException now.
	
	* src/org/eclipse/cdt/launch/internal/LocalCLaunchConfigurationDelegate.java
	
2004-03-01 James Ciesielski

	Marked those strings that are non-translatable as such and 
	externalized those strings that can be translated.
