@@ -116,5 +116,6 @@ Launch.common.Exception_occurred_reading_configuration_EXCEPTION=Exception occur
 Launch.common.DebuggerColon=Debugger:
 Launch.common.BinariesColon=Binaries:
 Launch.common.QualifierColon=Qualifier:
-Launch.common.B&rowse...=B&rowse...
+Launch.common.Browse_1=&Browse
+Launch.common.Browse_2=B&rowse
 Launch.common.Project_does_not_exist=Project does not exist
